# blackout

./: Makefile  alembic.ini  data_k_oblast.html  encoded_data_dtek.txt  logic.py  parse_data.py  pyproject.toml  requirements.txt  resulting_list.json  show_storage.py  states_dtek.txt  storage  supervisor.conf  test_decorate.py
