[tool.poetry]
name = "blackout_bot"
version = "0.1.0"
description = ""
authors = ["Vlad-Vargan <blach.smith.2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = {version = "^20.0b0", extras = ["ext"], allow-prereleases = true}
python-dotenv = "^0.19.2"
loguru = "^0.5.3"
Jinja2 = "^3.0.3"
pydantic = "^1.9.0"
pytz = "^2022.7"
async-cache = "^1.1.1"
sqlalchemy = "^2.0.1"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
mypy-extensions = "^0.4.3"
black = {version = "^21.11b1", allow-prereleases = true}
pydeps = "^1.10.24"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
pycycle = "^0.0.8"
amplitude-analytics = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
